<resources>
    <string name="app_name">ContactMe</string>
    <string name="app_title">ContactMe</string>
    <string name="splash_company_name">Mobley, Inc</string>
    <string name="splash_copyright">copyright 2019&#8211;2020</string>

    <string name="main_subtitle">Main</string>
    <string name="actions_subtitle">Actions</string>
    <string name="pref_subtitle">Preferences</string>

    <string name="phone_button_label">Call %1$s</string>
    <string name="phone_cell_button_label">Call Cell</string>
    <string name="phone_work_button_label">Call Work</string>
    <string name="text_button_label">Text %1$s</string>
    <string name="email_button_label">Email %1$s</string>
    <string name="actions_button_label">Actions</string>

    <string name="action_settings">Settings</string>
    <string name="action_set_start_time">Set Start Work Time</string>
    <string name="action_set_end_time">Set End Work Time</string>
    <string name="action_exit">Exit</string>
    <string name="action_return">Return</string>
    <string name="action_clear_db">Delete Actions</string>

    <string name="alert_verify_delete">Delete all actions</string>
    <string name="alert_delete_msg">This will delete all actions. Are you sure?</string>

    <string name="default_name">Name</string>
    <string name="default_email">noreply@email.com</string>
    <string name="default_cell_phone">9999999999</string>
    <string name="default_work_phone">9999999999</string>
    <string name="default_time_start">9:00</string>
    <string name="default_time_end">17:00</string>

    <string name="action_row_to_label">To:</string>

    <string name="timestamp_str">%1$d/%2$d/%3$d %4$d:%5$02d.%6$02d</string>

    <string name="work_time_start_title">Start Work Time</string>
    <string name="work_time_end_title">End Work Time</string>

    <string name="textbar_msg">Texting %1$s</string>
    <string name="emailbar_msg">Emailing %1$s</string>
    <string name="phonebar_msg">Calling %1$s</string>

    <string name="pref_category_phone_title">Contact Info</string>
    <string name="pref_category_phone_summary">Set phone numbers</string>

    <string name="pref_category_cell_phone">Cell Phone</string>
    <string name="pref_cell_phone_key">CellPhone</string>
    <string name="pref_cell_phone_title">Cell Phone Number</string>
    <string name="pref_cell_phone_summary">Phone number of cell phone</string>

    <string name="pref_category_work_phone">Work Phone</string>
    <string name="pref_work_phone_key">WorkPhone</string>
    <string name="pref_work_phone_title">Work Phone Number</string>
    <string name="pref_work_phone_summary">Phone number of work phone</string>

    <string name="pref_category_contact_title">Contact Info</string>
    <string name="pref_category_contact_summary">Set contact information</string>

    <string name="pref_category_name">Contact Name</string>
    <string name="pref_name_key">ContactName</string>
    <string name="pref_name_title">Name</string>
    <string name="pref_name_summary">Name of contact</string>

    <string name="pref_category_email">Contact Email</string>
    <string name="pref_email_key">ContactEmail</string>
    <string name="pref_email_title">Email</string>
    <string name="pref_email_summary">Email of contact</string>

    <string name="pref_category_time_title">Work Times</string>
    <string name="pref_category_time_summary">Set work times</string>

    <string name="pref_category_time_start">Start Time</string>
    <string name="pref_time_start_key">StartTime</string>
    <string name="pref_time_start_title">Start Time</string>
    <string name="pref_time_start_summary">Start Work Time</string>

    <string name="pref_category_time_end">End Time</string>
    <string name="pref_time_end_key">EndTime</string>
    <string name="pref_time_end_title">End Time</string>
    <string name="pref_time_end_summary">End Work Time</string>

    <string name="pref_category_misc">Miscellaneous</string>
    <string name="pref_misc_summary">Misc Settings</string>
    <string name="pref_category_version">Version</string>
    <string name="pref_version_key">Version</string>
    <string name="pref_version_title">App Version</string>
    <string name="pref_version_summary">Application Version</string>

    <string name="pref_category_sound">Sounds</string>
    <string name="pref_sound_key">SoundsHeard</string>
    <string name="pref_sound_title">Sound Effects?</string>
    <string name="pref_sound_on_summary">Sound Effects are ON</string>
    <string name="pref_sound_off_summary">Sound Effects are OFF</string>

    <string name="pref_phone_permission_key">PhonePermission</string>

</resources>
