<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_category_name" >
        <EditTextPreference
            android:key="@string/pref_name_key"
            android:title="@string/pref_name_title"
            android:summary="@string/pref_name_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_email" >
        <EditTextPreference
            android:key="@string/pref_email_key"
            android:title="@string/pref_email_title"
            android:summary="@string/pref_email_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_cell_phone" >
        <EditTextPreference
            android:key="@string/pref_cell_phone_key"
            android:title="@string/pref_cell_phone_title"
            android:summary="@string/pref_cell_phone_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_work_phone" >
        <EditTextPreference
            android:key="@string/pref_work_phone_key"
            android:title="@string/pref_work_phone_title"
            android:summary="@string/pref_work_phone_summary" />
    </PreferenceCategory>
    
</PreferenceScreen>