<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_category_version" >
        <EditTextPreference
            android:key="@string/pref_version_key"
            android:title="@string/pref_version_title"
            android:summary="@string/pref_version_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_sound" >
        <CheckBoxPreference
            android:key="@string/pref_sound_key"
            android:defaultValue="true"
            android:title="@string/pref_sound_title"
            android:summaryOff="@string/pref_sound_off_summary"
            android:summaryOn="@string/pref_sound_on_summary" />
    </PreferenceCategory>

</PreferenceScreen>